normalize id length in threadlist to ensure the normal alignment of navigational operators. also fixed list alignment.

--- a/style.css
+++ b/style.css
@@ -85,11 +85,13 @@ text-decoration: underline
 }
 
 .post-info {
-display: inline
+display: inline;
+float: left
 }
 
 .post-info-wrap {
-background: #eef
+background: #eef;
+overflow: hidden
 }
 
 .nav {
